# unibots-mark2-uncomplete

./: .gitignore  CONVERSATION_LOG.md  README.md
android/: .gitignore  CHANGES_FROM_OLD_PROJECT.md  CONVERSATION_LOG.md  ESP32_PLAN.md  NOTES.md  README.md  TECHNICAL_OVERVIEW.txt  esp32_main.cpp  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/tencent/yolo11ncnn/: MainActivity.java  UsbSerialHelper.java  YOLO11Ncnn.java
android/app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  udp_sender.h  yolo11ncnn.cpp
android/app/src/main/res/layout/: main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: device_filter.xml
arduino/BoardA/: BoardA.ino  platformio.ini
arduino/BoardB/: BoardB.ino  platformio.ini
arduino/HardwareTest/: HardwareTest.ino
arduino/MotorControl/: MotorControl.ino
arduino/MotorTest/: MotorTest.ino
arduino/UnibotsMain/: UnibotsMain.ino
arduino/UnibotsMainV2/: UnibotsMainV2.ino  platformio.ini
esp32/PinScanner/: PinScanner.ino
esp32/ReturnTest/: ReturnTest.ino
pc_test/: vision_test.py
pin codes details/extra stuff since 216/: schematic diagram 2  schematic_two_board (1) not sure what this is.md
pin codes details/new pins 246/: schematic_two_board (updated).md
simulation/: README.md  env_map.py  localizer.py  odometry.py  return_nav.py  robot_sim.py
